--- a/第2章 变量和基本类型/第2章 变量和基本类型.md
+++ b/第2章 变量和基本类型/第2章 变量和基本类型.md
@@ -1054,7 +1054,7 @@ decltype 的参数既可以是普通变量，也可以是一个表达式。
 - 当参数是普通变量时，推断出的类型就是该变量的类型；
 - 当参数是表达式时，推断出的类型是引用。
 
-decltype 和 auto 的一个重要区别是，decltype的结果类型鱼表达式形式密切相关。
+decltype 和 auto 的一个重要区别是，decltype的结果类型与表达式形式密切相关。
 
 **切记：** decltype((variable)) (注意是双层括号)的结果永远是引用，而 decltype(variable) 结果只有当 variable 本身就是一个引用才是引用。
 
@@ -1129,6 +1129,6 @@ i
 
 (1) `auto`类型说明符用编译器计算变量的初始值来推断其类型，而`decltype`虽然也让编译器分析表达式并得到它的类型，但是不实际计算表达式的值。
 (2) 编译器推断出来的`auto`类型有时候和初始值的类型并不完全一样，编译器会适当地改变结果类型使其更符合初始化规则。例如，`auto`一般会忽略掉顶层 const，而把底层 const 保留下来。与之相反，`decltype`会保留变量的顶层 const。
-(3) 与`auto`不同，`decltype`的结果类型与表达式形式密切相关，如果变量名加上了一对括号，则得到的类型鱼不加括号时会有不同。如果`decltype`使用的是一个不加括号的变量，则得到的结果就是该变量的类型；如果给变量加上了一层或多层括号，则编译器将推断得到引用类型。
+(3) 与`auto`不同，`decltype`的结果类型与表达式形式密切相关，如果变量名加上了一对括号，则得到的类型与不加括号时会有不同。如果`decltype`使用的是一个不加括号的变量，则得到的结果就是该变量的类型；如果给变量加上了一层或多层括号，则编译器将推断得到引用类型。
 
 ## 2.6 自定义数据结构（未完待续）
