--- a/第3章 字符串、向量和数组/第3章 字符串、向量和数组.md
+++ b/第3章 字符串、向量和数组/第3章 字符串、向量和数组.md
@@ -453,7 +453,845 @@ cout << "Your hex number is: " << result << endl;
 
 ## 3.3 标准库类型 vector
 
+标准库类型`vector`表示对象的几何，其中所有对象的类型都相同。因为`vector`“容纳着”其他对象，所以它也被称作**容器**(container)。
+
+C++语言既有**类模板**(class template)，也有函数模板，其中`vector`是一个类模板。
+
+模板本身不是类或函数，相反可以将模板看作为编译器生成类或函数编写的一分说明。编译器根据模板创建类或函数的过程称为**实例化**(instantiation)，当使用模板时，需要指出编译器应把类或模板实例化成何种类型。
+
+对于类模板来说，我们通过提供一些额外信息来指定模板到底实例化成什么样的类，需要提供哪些信息由模板决定。提供信息的方式：在模板名字后面跟一对尖括号，在括号内放上信息。
+
+```cpp
+vector<int> ivec;               // ivec 保存 int 类型的对象
+vector<Sales_item> Sales_vec;   // 保存 Sales_item 类型的对象
+vector<vector<string>> file;    // 该向量的元素是 vector 对象
+```
+
+### 3.3.1 定义和初始化 vector 对象
+
+| 表3.4                     | 初始化`vector`对象的方法 |
+| ------------------------- | ------------------------ |
+| `vector<T> v1`            | v1 是一个空 vector，它潜在的元素是 T 类型的，执行默认初始化|
+| `vector<T> v2(v1)`        | v2 中包含有 v1 所有元素的副本|
+| `vector<T> v2 = v1`       | 等价于 v2(v1)，v2 中包含有 v1 所有元素的副本|
+| `vector<T> v3(n, val)`    | v3 包含了 n 个重复的元素，每个元素的值都是 val|
+| `vector<T> v4(n)`         | v4 包含了 n 个重复地执行了值初始化的对象|
+| `vector<T> v5{a,b,c...}`  | v5 包含了初始值个数的元素，每个元素被赋予相应的初始值|
+| `vector<T> v5={a,b,c...}` | 等价于 v5(a,b,c...)|
+
+注意两个 vector 对象的类型必须相同：
+
+```cpp
+vector<int> ivec;           // 初始状态为空
+vector<int> ivec2(ivec);    // 把 ivec 的元素拷贝给 ivec2
+vector<int> ivec3 = ivec;   // 把 ivec 的元素拷贝给 ivec3
+vector<string> svec(ivec2); // 错误：svec的元素是string对象，不是int
+```
+
+**练习3.12：下列 vector 对象的定义有不正确的吗？**
+
+```cpp
+/* 练习3.12：下列 vector 对象的定义有不正确的吗？
+如果有，请指出来。对于正确的，描述其执行结果；对于不正确的，说明其错误的原因。*/
+
+(a) vector<vector<int>> ivec;
+// 正确。定义了一个名为 ivec 的 vector 对象，其中的每个元素都是 vector<int> 对象。
+
+(b) vector<string> svec = ivec;
+// 错误。svec 的元素类型是 string，而 ivec 的元素类型是 int，因此不能使用 ivec 初始化 svec。
+
+(c) vector<string> svec(10, "null");
+// 正确。定义了一个名为 svec 的 vector 对象，其中含有 10 个元素，每个元素都是字符串 null。(null 是一个 int 变量，但这里写的是 "null"，是字符串)。
+```
+
+#### 列表初始化`vector`对象 P88
+
+列表初始化：用花括号括起来 0 个或多个厨师元素值被赋给 vector 对象：
+
+`vector<string> articles = {"a", "an", "the"};`
+
+回顾：C++定义了初始化的几种不同形式：P39
+其中用花括号来初始化变量的这种初始化形式被称为**列表初始化**(list initialization)。
+
+```cpp
+int units_sold = 0;
+int units_sold = {0};
+int units_sold{0};
+int units_sold(0);
+```
+
+列表初始化 vector 对象，特殊要求是：如果提供的是初始元素值的列表，则只能把初始值都放在花括号里进行列表初始化，而不能放在圆括号里：
+
+```cpp
+vector<string> v1{"a", "an", "the"};    // 列表初始化
+vector<string> v2("a", "an", "the");    // 错误
+```
+
+#### 创建指定数量的元素
+
+还可以用`vector`对象容纳的元素数量和所有元素的统一初始值来初始化 vector 对象：
+
+```cpp
+vector<int> ivec(10, -1);       // 10 个 int 类型的元素，每个都被初始化为 -1
+vector<string> svec(10, "hi!"); // 10 个 string类型的元素，每个都被初始化为 "hi!"
+```
+
+#### 值初始化
+
+通常情况下，可以只提供 vector 对象容量的元素数量而不用略去初始值。此时库会创建一个**值初始化的**(value-initialized)元素初值，并把它赋给容器中的所有元素。这个初值由 vector 对象中元素的类型决定。
+
+```cpp
+vector<int> ivec(10);       // 10 个元素，每个都初始化为 0
+vector<string> svec(10);    // 10 个元素，每个都是空 string 对象
+```
+
+#### 列表初始值还是元素数量？
+
+**花括号 vs 圆括号：**
+
+```cpp
+ vector<int> v1(10);        // v1 有 10 个元素，每个的值都是 0
+ vector<int> v2{10};        // v2 有 1 个元素，该元素的值是 10
+ 
+ vector<int> v3(10, 1);     // v3 有 10 个元素，每个的值都是 1
+ vector<int> v4{10, 1};     // v4 有 2 个元素，值分别是 10 和 1
+
+ vector<string> v5{"hi"};   // 列表初始化，v5 有一个元素
+ vector<string> v6("hi");   // 错误：不能使用字符串字面值构建 vector 对象
+ 
+ vector<string> v7{10};         // v7 有 10 个默认初始化的元素
+ vector<string> v8{10, "hi"};   // v8 有 10 个值为 "hi" 的元素
+```
+
+上面其实只有 v5 是列表初始化。要想列表初始化对象，花括号里的值必须与元素类型相同。
+
+**练习3.13：下列的 vector 对象各包含多少个元素怒？这些元素的值分别是多少？**
+
+```cpp
+/* 练习3.13：下列的 vector 对象各包含多少个元素怒？这些元素的值分别是多少？ */
+
+(a) vector<int> v1;
+// 元素数量为 0
+
+(b) vector<int> v2(10);
+// 10 个元素，每个元素都被初始化为 0
+
+(c) vector<int> v3(10, 42);
+// 10 个元素，每个元素都被初始化为 42
+
+(d) vector<int> v4{10};
+// 1 个元素，元素值为 10
+
+(e) vector<int> v5{10, 42};
+// 2 个元素，元素值分别为 10 和 42
+
+(f) vector<string> v6{10};
+// 10 个元素，每一个元素都被初始化为空字符串
+
+(g) vector<string> v7{10, "hi"};
+// 10 个元素，每一个元素都被诶初始化为 "hi"
+```
+
+```cpp
+/* 练习3.19：如果想定义一个含有 10 个元素的 vector 对象，所有元素的值都是 42，请列举出三种不同的实现方法。哪种方法更好呢？为什么？*/
+
+// 思路一：先定一个空 vector 对象，然后添加元素。
+vector<int> vInt;
+for (int i = 0; i < 10; i++)
+    vInt.push_back(42);
+
+// 思路二：列表初始化，罗列出全部 10 个元素的值。
+vector<int> vInt = {42,42,42,42,42,42,42,42,42,42};
+
+// 思路三：用括号给出所有元素的值，效果类似于思路二。
+vector<int> vInt{42,42,42,42,42,42,42,42,42,42};
+
+// 思路四：定义的时候使用参数指定元素个数及重复的值。（这个最好）
+vector<int> vInt(10, 42);
+
+// 思路五：先指定元素个数，再利用范围for循环依次为元素赋值。
+vector<int> vInt(10);
+for (auto &i : vInt)
+    i = 42;
+
+// 思路四采用的初始化方式形式上最简洁直观。
+```
+
+
+### 3.3.2 向`vector`对象中添加元素
+
+创建一个空`vector`，运行时再利用 `push_back`向其中添加元素，`push_back`负责把一个值当成`vector`对象的尾元素“压到(push)” `vector`对象的“尾端(back)”。
+
+```cpp
+vector<int> v2;         // 空 vector 对象
+for (int i = 0; i != 100; ++i)
+    v2.push_back(i);    // 依次把整数值放到 v2 尾端
+// 循环结束后 v2 有 100 个元素，值从 0 到 99
+```
+
+```cpp
+/* 如果直到运行时才能直到 vector 对象中元素的确切个数，也应使用这种方法
+比如：从标准输入中读取单词，将其作为 vector 对象的元素存储 */
+
+string word;
+vector<string> text;        // 空 vector 对象
+while (cin >> word) {
+    text.push_back(word);   // 把 word 添加到 text 后面
+}
+```
+
+**关键概念：`vector`对象能高效增长**
+当所有(all)元素的值都一样时，在定义 vector 对象的时候有必要设定其大小；
+一旦元素的值有所不同，更有效的办法是先定一个空的 vector 对象，再在运行时向其中添加具体值。
+这跟 C 或 Java在创建对象时顺便制定其容量的做法恰恰相反。
+
+#### 向`vector`对象添加元素蕴含的编程假定
+
+注意：如果循环体内部包含有向`vector`对象添加元素的语句，则不能使用范围`for`循环。
+WARNING: 范围`for`语句体内不应改变其所遍历序列的大小。
+
+**练习3.14：编写一段程序，用 cin 读入一组整数并把它们存入一个 vector 对象。**
+
+```cpp
+/* 练习3.14：编写一段程序，用 cin 读入一组整数并把它们存入一个 vector 对象。*/
+
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+int main()
+{
+    vector<int> vInt;       // 元素类型为 int 的 vector 对象
+    int i;                  // 记录用户的输入值
+    char cont = 'y';        // 与用户交互，决定是否继续输入
+    while (cin >> i)
+    {
+        vInt.push_back(i);  // 向 vector 对象中添加元素
+        cout << "Do you wanna continue? (y or n)? " << endl;
+        cin >> cont;
+        if (cont != 'y' && cont != 'Y')
+            break;
+    }
+    for (auto mem : vInt)   // 使用范围for循环语句遍历 vInt 中的每个元素
+        cout << mem << " ";
+    cout << endl;
+    return 0;
+}
+/* Output:
+1
+Do you wanna continue? (y or n)?
+y
+2
+Do you wanna continue? (y or n)?
+y
+3
+Do you wanna continue? (y or n)?
+Y
+4
+Do you wanna continue? (y or n)?
+1 2 3 4
+*/
+```
+
+```cpp
+/* 练习 3.17：从 cin 读入一组词并把它们存入一个 vector 对象，
+然后设法把所有词都改写为大写形式。
+输出改变后的结果，每个词占一行。*/
+
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+
+int main()
+{
+    vector<string> vString;
+    string word;
+    char cont = 'y';
+    cout << "Enter the first word: " << endl;
+    while (cin >> word)
+    {
+        vString.push_back(word);
+        cout << "Do you wanna continue (y or n)? " << endl;
+        cin >> cont;
+        if (cont != 'y' && cont != 'Y')
+            break;
+        cout << "Please enter the next word: " << endl;
+    }
+    cout << "The converted result is: " << endl;
+    for (auto &mem : vString) { // 使用范围for循环语句遍历vString中的每个元素
+        for (auto &c : mem)     // 使用范围for循环语句遍历mem中的每个字符
+            c = toupper(c);     // 改写为大写字母形式
+        cout << mem << endl;
+    }
+    return 0;
+}
+
+/* Output:
+Enter the first word: 
+Meow
+Do you wanna continue (y or n)? 
+y
+Please enter the next word: 
+Alex
+Do you wanna continue (y or n)? 
+Y
+Please enter the next word: 
+Bordora
+Do you wanna continue (y or n)? 
+n
+The converted result is:
+MEOW
+ALEX
+BORDORA
+*/
+```
+
+### 3.3.3 其他`vector`操作
+
+| 表3.5：              | `vector`支持的操作                                           |
+| -------------------- | ------------------------------------------------------------ |
+| `v.empty()`          | 如果`v`不含有任何元素，返回真，否则返回假                    |
+| `v.size()`           | 返回`v`中元素的个数                                          |
+| `v.push_back(t)`     | 向`v`的尾端添加一个值为`t`的元素                             |
+| `v[n]`               | 返回`v`中第`n`个位置上元素的引用                             |
+| `v1 = v2`            | 用`v2`中元素的拷贝替换`v1`中的元素                           |
+| `v1 = {a, b, c...}`  | 用列表中元素的拷贝替换`v1`中的元素                           |
+| `v1 == v2`           | `v1`和`v2`相等当且晋档它们的元素数量相同且对应位置的元素值都相同 |
+| `v1 != v2`           |                                                              |
+| `<`, `<=`, `>`, `>=` | 顾名思义，以字典顺序进行比较                                 |
+
+使用范围for语句处理 vector 对象中的所有元素：
+
+```cpp
+vector<int> v{1,2,3,4,5,6,7,8,9}
+for (auto &i : v)       // 对于 v 中的每个元素（注意：i 是一个引用）
+    i *= i;             // 求元素的平方
+for (auto i : v)        // 对于 v 中的每个元素
+    cout << i << " ";   // 输出该元素
+cout << endl;
+```
+
+第一个循环把控制变量 i 定义成引用类型，这样就能通过 i 给 v 的元素赋值，其中 i 的类型由 `auto` 关键字指定。
+`size`返回 vector 对象中元素的个数，返回值的类型是由 vector 定义的`size_type`类型。
+要使用`size_type`，需首先指定它是由哪种类型定义的。`vector`对象的类型总是包含着元素的类型：
+
+```cpp
+vector<int>::size_type  // 正确
+vector::size_type       // 错误
+```
+
+#### 计算`vector`内对象的索引
+
+下标的类型也是相应的`size_type`类型。
+
+举个例子，假设有一组成绩的集合，其中成绩的取值是从 0 到 100。以 10 分为一个分数段，要求统计各个分数段各有多少个成绩。
+显然，从 0 到 100 总共有 101 种可能的成绩取值，这些成绩分布在 11 个分数段上：每 10 个分数构成一个分数段，这样的分数段有 10 个，额外还有一个分数段表示满分 100 分。
+这样第一个分数段将统计成绩在 0 到 9 之间的数量；
+第二个分数段将统计成绩在 10 到 19 之间的数量，以此类推。
+最后一个分数段统计满分 100 分的数量。
+按照上面的描述，如果输入的成绩如下：
+42 65 95 100 39 67 95 76 88 76 83 92 76 93
+则输出的结果应该是：
+0 0 0 1 1 0 2 3 2 4 1
+
+结果显示：
+成绩在30分以下的没有、
+30分至39分有 1 个、
+40分至49分有 1 个、
+50分至59分没有、
+60分至69分有 2 个、
+70分至79分有 3 个、
+80分至89分有 2 个、
+90分至99分有 4 个、
+还有 1 个是满分。
+
+```cpp
+/* 以 10 分为一个分数段统计成绩的数量：0~9, 10~19, ..., 90~99, 100 */
+
+vector<unsigned> scores(11, 0); // 11 个分数段，全都初始化为 0
+unsigned grade;
+while (cin >> grade) {          // 读取成绩
+    if (grade <= 100)           // 检查读入的成绩是否合法（即是否小于等于100分）
+        ++scores[grade/10];     // 将成绩对应分数段的计数值加 1
+}
+```
+
+执行计数值累加的那条语句很好地体现了 C++ 程序代码的简洁性。
+`++scores[grade/10];` // 将当前分数段的计数加 1
+
+等价于：
+auto ind = grade/10;  // 得到分数段索引
+score[ind] = score[ind] + 1;    // 将计数值加 1
+
+另一种方法：用迭代器(iterator)改写该程序并实现完全相同的功能。（练习 3.25）
+
+```cpp
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+int main()
+{
+    vector<unsigned> scores(11);
+    auto it = scores.begin();
+    int grade;
+    cout << "Please enter a group of scores (0~100): " << endl;
+    while (cin >> grade)
+        if (grade <= 100)
+            ++*(it + grade/10); //利用迭代器定位到对应的元素，加 1
+    cout << "You have inputted in total " << scores.size() << " scores." << endl;
+    cout << "The number of people in each band (from low to high) is: " << endl;
+    // 利用迭代器遍历 scores 的元素并逐个输出
+    for (it = scores.begin(); it != scores.end(); it++)
+    {
+        cout << *it << " ";
+    }
+    cout << endl;
+
+    return 0;
+}
+```
+
+#### 不能用下标形式添加元素
+
+```cpp
+/* 通过 vector 对象的下标形式来添加元素可能会产生错误 */
+vector<int> ivec;
+for (decltype(ivec.size()) ix = 0; ix != 10; ++ix)
+    ivec[ix] = ix;  // 严重错误：ivec 不包含任何元素
+```
+
+`ivec`是一个空`vector`，根本不包含任何元素，当然也就不能通过下标去访问任何元素。正确的方法是使用`push_back`：
+
+```cpp
+vector<int> ivec;
+for (decltype(ivec.size()) ix = 0; ix != 10; ++ix)
+    ivec.push_back(ix); // 正确：添加一个新元素，该元素的值是 ix
+```
+
+`vector`对象（以及`string`对象）的下标运算符可用于访问已存在的元素，而不能用于添加元素。
+
+通过下标访问不存在的元素会产生很严重的后果，所谓的缓冲区溢出(buffer overflow)指的就是这类错误。
+
+确保下标合法的一种有效手段就是尽可能使用范围for语句。
+
 ## 3.4 迭代器介绍
+
+之前学习了使用下标运算符访问 string 对象的字符或 vector 对象的元素；
+使用**迭代器(iterator)**也可以实现同样的目的。
+所有标准库容器都可以使用迭代器，但是其中只有少数几种才同时支持下标运算符。
+
+### 3.4.1 使用迭代器
+
+有迭代器的类型同时拥有返回迭代器的成员：
+
+- **`begin`**，负责返回指向第一个元素（或第一个字符）的迭代器；
+- **`end`**，负责返回指向容器（或 string 对象）“尾元素的下一位置”(one past the end)的迭代器；**end**成员返回的迭代器常被称作**尾后迭代器**(off-the-end iterator)或者简称为尾迭代器(end iterator)。
+- 如果容器为空，则`begin`和`end`返回的是同一个迭代器，都是尾后迭代器。
+
+```cpp
+/* 由编译器决定 b 和 e的类型，使用 auto 关键字定义变量 b 和 e */
+auto b = v.begin(), e = v.end();    // b 和 e 的类型相同
+```
+
+#### 迭代器运算符
+
+| 表3.6：          | 标准容器迭代器的运算符                                       |
+| ---------------- | ------------------------------------------------------------ |
+| `*iter`          | 返回迭代器`iter`所指元素的引用                               |
+| `iter->mem`      | 解引用`iter`并获取该元素的名为`mem`的成员，等价于`(*iter).mem` |
+| `++iter`         | 令`iter`指示容器中的下一个元素                               |
+| `--iter`         | 令`iter`指示容器中的上一个元素                               |
+| `iter1 == iter2` | 判断两个迭代器是否相等（不相等），如果两个迭代器指示的是同一个元素或者它们是同一个容器的尾后迭代器，则相等；反之，不相等。 |
+| `iter1 != iter2` |                                                              |
+
+如果两个迭代器指向的元素相同或者都是同一个容器的尾后迭代器，则它们相等；否则就说这两个迭代器不相等。
+
+通过**解引用迭代器**来获取它所指示的元素：
+
+```cpp
+/* 将 string 对象的第一个字母改为大写形式 */
+string s("some string");
+if (s.begin() != s.end()) { // 首先检查 s 是否为空，确保 s 非空
+    auto it = s.begin();    // it 表示 s 的第一个字符
+    *it = toupper(*it);     // 将当前字符改成大写形式
+}
+// Output: Some string
+```
+
+#### 将迭代器从一个元素移动到另外一个元素
+
+Note: 因为`end`返回迭代器并不实际指示某个元素，所以不能对其进行递增或解引用的操作。
+
+```cpp
+/* 将 string 对象中第一个单词改写为大写形式*/
+// 依次处理 s 的字符直至我们处理完全部字符或者遇到空白
+for (auto it = s.begin(); it != s.end() && !isspace(*it); ++it)
+    *it = toupper(*it);     // 将当前字符改成大写形式
+```
+
+循环部分首先用`s.begin`的返回值来初始化`it`，意味着`it`指示的是`s`中的第一个字符（如果有的话）。
+条件部分检查是否已到达`s`的尾部，如果尚未到达，则将`it`解引用的结果传入`isspace`函数检查是否遇到了空白。
+
+**关键概念：泛型编程**：C++程序员习惯性地使用`!=`而非`<`，是因为只有 string 和 vector 等一些标准库类型有下标运算符，大多数都没有定义`<`运算符，但是所有标准库容器的迭代器都定义了`==`和`!=`。所以要养成使用迭代器和`!=`的习惯。
+
+#### 迭代器类型
+
+就像不知道`string`和`vector`的`size_type`成员到底是什么类型一样，一般来说我们也不知道或无须知道迭代器的精确类型。
+
+实际上，那些拥有迭代器的标准库类型使用`iterator`和`const_iterator`来表示迭代器的类型。
+
+```cpp
+vector<int>::iterator it;   // it 能读写 vector<int> 的元素
+string::iterator it2;       // it2 能读写 string 对象中的字符
+
+vector<int>::const_iterator it3;    // it3 只能读元素，不能写元素
+string::const_iterator it4;         // it4 只能读元素，不能写元素
+```
+
+- `iterator` 的对象可读可写
+- `const_iterator` 能读取但不能修改它所指的元素值
+
+如果`vector`对象或`string`对象是一个常量，只能使用`const_iterator`；
+如果`vector`对象或`string`对象不是常量，那么既能使用`iterator`也能使用`const_iterator`。
+
+#### `begin`和`end`运算符
+
+```cpp
+vector<int> v;
+const vector<int> cv;
+auto it1 = v.begin();   // it1 的类型是 vector<int>::iterator
+auto it2 = cv.begin();  // it2 的类型是 vector<int>::const_iterator
+auto it3 = v.cbegin();  // it3 的类型是 vector<int>::const_iterator
+```
+
+为了专门得到`const_iterator`类型的返回值，C++新标准引入两个新函数，分别是`cbegin`和`cend`。
+如果对象不是常量，返回`iterator`；如果对象是常量，`begin`和`end`返回`const_iterator`。
+不论 vector 对象（或 string 对象）本身是否是常量，返回值都是 `const_iterator`。
+
+#### 结合解引用和成员访问操作
+
+**解引用迭代器**可获得迭代器所指的对象，如果该对象的类型恰好是类，就有可能希望进一步访问它的成员。
+
+对于一个由字符串组成的`vector`对象来说，要想检查其元素是否为空，令`it`是该`vector`对象的迭代器，只需检查`it`所指字符串是否为空就可以了：`(*it).empty()`
+
+```cpp
+(*it).empty()   // 解引用 it，然后调用结果对象的 empty 成员
+*it.empty()     // 错误：试图访问 it 的名为 empty 的成员，但 it 是个迭代器，没有 empty 成员
+```
+
+注意：`(*it).empty()` 圆括号必不可少。该表达式的含义是先对`it`解引用，然后解引用的结果再执行点运算符。如果不加圆括号，点运算符将由`it`来执行，而非`it解引用的结果`。
+
+上面第二个表达式的含义是从名为`it`的对象中寻找其`empty`成员，显然`it`是一个迭代器，它没有哪个成员叫`empty`的，所以第二个表达式将发生错误。
+
+为了简化，**箭头运算符(->)** 把**解引用**和**成员访问**两个操作结合在一起，也就是说，`it->mem` 和 `(*it).mem`表达的意思相同。
+
+例：假设用一个名为 text 的字符串向量存放文本文件中的数据，其中的元素或者是一句话或者是一个用于表示段落分隔的空字符串。如果要输出 text 中第一段的内容，可以利用迭代器写一个循环令其遍历 text，直到遇到空字符串的元素为止：
+
+```cpp
+// 依次输出 text 的每一行直至遇到第一个空白行为止
+for (auto it = text.cbegin(); it != text.cend() && !it->empty(); ++it)
+    cout << *it << endl;
+```
+
+值得注意的是，因为循环从头到尾只是读取 text 的元素而未向其中写值，所以使用了`cbegin`和`cend`来控制整个迭代过程。
+当需要更改 vector 对象的内容，所以使用的迭代器应该是`begin`和`end`，而非 cbegin 和 cend。
+
+**练习 3.22：修改之前那个输出 text 第一段的程序，首先把 text 的第一段全都改成大写形式，然后再输出它。**
+
+```cpp
+/* 练习 3.22：修改之前那个输出 text 第一段的程序，首先把 text 的第一段全都改成大写形式，然后再输出它。*/
+
+/* 思路：需要将第一段（vector对象第一个空串元素之前的所有元素）改写成大写字母的形式再输出。
+因为需要更改 vector 对象的内容，所以使用的迭代器应该是 begin 和 end，而非 cbegin 和 cend。*/
+
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+
+int main()
+{
+    vector<string> text;
+    string s;
+    // 利用 getline 读取一句话，直接回车产生一个空串，表示段落结束
+    while (getline(cin, s))
+        text.push_back(s);
+    // 利用迭代器遍历全部字符串，遇空串停止循环
+    for (auto it = text.begin(); it != text.end() && !it -> empty(); it++)
+    {
+        // 利用迭代器遍历当前字符串
+        for (auto it2 = it -> begin(); it2 != it -> end(); it2++)
+            *it2 = toupper(*it2);   // 利用toupper改写成大写形式
+        cout << *it << endl;        // 输出当前字符串
+    }
+    return 0;
+}
+```
+
+**练习3.23：编写一段程序，创建一个含有 10 个整数的 vector 对象，然后使用迭代器将所有元素的值都变成原来的两倍。**
+
+```cpp
+/* 练习3.23：编写一段程序，创建一个含有 10 个整数的 vector 对象，然后使用迭代器将所有元素的值都变成原来的两倍。
+输出 vector 对象的内容，检验程序是否正确。*/
+
+#include <iostream>
+#include <vector>
+#include <ctime>
+#include <cstdlib>
+
+using namespace std;
+
+int main()
+{
+    vector<int> vInt;
+    srand((unsigned)time(NULL));    // 生成随机数种子
+    for (int i = 0; i < 10; i++)
+    {
+        vInt.push_back(rand() % 1000);  // 每次循环生成一个1000以内的随机数并添加到vInt中
+    }
+
+    cout << "The 10 randomly generated numbers are: " << endl;
+    // 利用常量迭代器读取原始数据
+    for(auto it = vInt.cbegin(); it != vInt.cend(); it++)
+    {
+        cout << *it << " ";     // 输出当前数字
+    }
+    cout << endl;
+
+    cout << "The 10 doubled numbers are: " << endl;
+    // 利用非常量迭代器修改 vInt 内容并输出
+    for (auto it = vInt.begin(); it != vInt.end(); it++)
+    {
+        *it *= 2;
+        cout << *it << " ";     // 输出当前数字
+    }
+    cout << endl;
+
+    return 0;
+}
+```
+
+#### 某些对`vector`对象的操作会使迭代器失效
+
+- 不能在范围for循环中向`vector`对象添加元素
+- 任何一种可能改变`vector`对象容量的操作，比如`push_back`，都会使该`vector`对象的迭代器失效
+
+谨记：但凡是使用了迭代器的循环体，都不要向迭代器所属的容器添加元素。
+
+### 3.4.2 迭代器运算 (iterator arithmetic)
+
+**vector 和 string 迭代器支持的运算**：
+
+#### 迭代器的算术运算
+
+- `iter + n`
+- `iter - n`
+- `iter1 += n`
+- `iter1 -= n`
+- `iter1 - iter2`
+- `>`、`>=`、`<`、`<=`
+
+只要两个迭代器指向的是同一个容器中的元素或者尾元素的下一位置，就能将其相减，所得结果是两个迭代器的距离。所谓举例指的是右侧的迭代器向前移动多少位置就能追上左侧的迭代器，其类型是名为 **difference_type** 的带符号整型数。string 和 vector 都定义了 difference_type，因为这个举例可正可负，所以 difference_type 是带符号类型的。
+
+#### 使用迭代器运算
+
+使用迭代器运算的一个经典算法是二分搜索。
+
+```cpp
+// text 必须是有序的
+// beg 和 end 表示我们搜索的范围
+auto beg = text.begin(), end = text.end();
+auto mid = text.begin() + (end - beg)/2; // 初始状态下的中间点
+// 当还有元素尚未检查并且我们还没有找到 sought 时执行循环
+while (mid != end && *mid != sought) {
+    if (sought < *mid)  // 我们要找的元素在前半部分吗？
+        end = mid;      // 如果是，调整搜索范围使得忽略掉后半部分
+    else                // 我们要找的元素在后半部分
+        beg = mid + 1;  // 在 mid 之后找
+    mid = beg + (end - beg)/2;  // 新的中间点
+}
+```
+
+循环部分先检查搜索范围是否为空，如果 mid 和 end 的当前值相等，说明已经找遍了所有元素。此时条件不满足，循环终止。当搜索范围不为空，可知 mid 指向了某个元素，检查该元素是否就是我们所要搜索的，如果是，也终止循环。
+
+循环过程终止时，`mid`或者等于`end`或者指向要找的元素。如果`mid`等于`end`，说明 text 中没有我们要找的元素。P101
+
+**练习3.26：在这个二分搜索程序中，为什么用的是`mid = beg + (end - beg) / 2`，而非`mid = (beg + end) / 2`？**
+
+解答：
+C++并没有定义两个迭代器的加法运算，实际上直接把两个迭代器加起来是没有意义的。
+
+与之相反，C++定义了迭代器的检法运算，两个跌大气相减的结果是它们之间的距离，也就是说，将运算符右侧的迭代器向前移动多少个元素后可以得到左侧的迭代器，参与运算的两个跌大气必须指向同一个容器中的元素或尾后元素。
+
+另外，C++还定义了迭代器与整数的加减法运算，用以控制迭代器在容器中左右移动。
+
+在本题中，因为迭代器的加法不存在，所以`mid = (beg + end) / 2;`不合法。
+`mid = beg + (end - beg) / 2;`的含义是，先计算`end - beg`的值得到容器中的元素个数，然后控制迭代器从开始处向右移动二分之一容器的长度，从而定位到容器正中间的元素。
+
+**练习3.24：请使用迭代器重做3.3.3节（第94页）的最后一个练习（P101）。**
+
+```cpp
+/* 练习3.24：请使用迭代器重做 3.3.3 节（第94页）的最后一个练习。P101 */
+
+/* 练习3.20：读入一组整数并把它们存入一个 vector 对象，将每对相邻整数的和输出出来。
+改写你的程序，这次要求先输出第 1 个和最后 1 个元素的和，接着输出第 2 个和倒数第 2 个元素的和，以此类推。*/
+
+// 求相邻元素和的程序如下所示：
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+int main()
+{
+    vector<int> vInt;
+    int iVal;
+    cout << "Please enter a group of numbers: " << endl;
+    while (cin >> iVal)
+        vInt.push_back(iVal);
+
+    if (vInt.cbegin() == vInt.cend())
+    {
+        cout << "There are no elements." << endl;
+        return -1;
+    }
+    cout << "Adjacent two numbers are: " << endl;
+    // 利用 auto 推断 it 的类型
+    for (auto it = vInt.cbegin(); it != vInt.cend() - 1; it++)
+    {
+        // 求相邻两项的和
+        cout << *it + *(++it) << " ";
+        // 每行输出 5 个数字
+        if ((it - vInt.cbegin() + 1) % 10 == 0)
+            cout << endl;
+    }
+    // 如果元素数是奇数，单独处理最后一个元素
+    if (vInt.size() % 2 != 0)
+        cout << *(vInt.end() - 1);
+    return 0;
+}
+
+/*
+Please enter a group of numbers:
+5
+548
+45
+987
+87
+74
+15
+^Z
+Adjacent two numbers are:
+553 1032 161 15
+*/
+
+// 求首尾元素和的程序如下所示：
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+int main()
+{
+    vector<int> vInt;
+    int iVal;
+    cout << "Please enter a group of numbers: " << endl;
+    while (cin >> iVal)
+        vInt.push_back(iVal);
+    if (vInt.cbegin() == vInt.cend())
+    {
+        cout << "There are no elements." << endl;
+        return -1;
+    }
+    auto beg = vInt.begin();
+    auto end = vInt.end();
+    cout << "First and last elements are: " << *beg << " " << *(end-1) << endl;
+    // 利用 auto 推断 it 的类型
+    for  (auto it = beg; it != beg + (end - beg)/2; it++)
+    {
+        cout << (*it + *(beg + (end - it) - 1)) << " "; // ???
+        // 每行输出 5 个数字
+        if ((it - beg + 1) % 5 == 0)                    // ???
+            cout << endl;
+    }
+    // 如果元素数是奇数，单独处理中间那个元素
+    if(vInt.size() % 2 != 0)
+        cout << *(beg + (end - beg)/2);
+    return 0;
+}
+
+/*
+Please enter a group of numbers:
+5
+548
+45
+987
+87
+74
+15
+^Z
+First and last elements are: 5 15
+20 622 132 987
+*/
+```
+
+**练习 3.25：3.3.3节（第93页）划分分数段的程序是使用下标运算符实现的，请利用迭代器改写该程序并实现完全相同的功能。**
+
+```cpp
+/* 以 10 分为一个分数段统计成绩的数量：0~9, 10~19, ..., 90~99, 100
+得到各分数段的人数分布（成绩从低到高）*/
+
+// 用下标运算符
+vector<unsigned> scores(11, 0); // 11 个分数段，全都初始化为 0
+unsigned grade;
+while (cin >> grade) {          // 读取成绩
+    if (grade <= 100)           // 检查读入的成绩是否合法（即是否小于等于100分）
+        ++scores[grade/10];     // 将成绩对应分数段的计数值加 1
+}
+
+// 用迭代器改写，通过解引用迭代器来获取它所指示的元素
+vector<unsigned> scores(11);
+auto it = scores.begin();
+int grade;
+while (cin >> grade)
+    if (grade <= 100)
+        ++*(it + grade/10);     // 利用迭代器定位到对应的元素，加 1
+```
+
+```cpp
+// 迭代器改写的完整代码
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+int main()
+{
+    vector<unsigned> scores(11);
+    auto it = scores.begin();
+    int grade;
+    cout << "Please enter a group of scores (0~100): " << endl;
+    while (cin >> grade)
+        if (grade <= 100)
+            ++*(it + grade/10); // 利用迭代器定位到对应的元素，加 1
+    cout << "You have inputted in total " << scores.size() << " scores." << endl;
+    cout << "The number of people in each band (from low to high) is: " << endl;
+    // 利用迭代器遍历 scores 的元素并逐个输出
+    for (it = scores.begin(); it != scores.end(); it++)
+    {
+        cout << *it << " ";
+    }
+    cout << endl;
+
+    return 0;
+}
+```
 
 ## 3.5 数组
 
