--- a/第1章 开始/第1章 开始.md
+++ b/第1章 开始/第1章 开始.md
@@ -156,3 +156,117 @@ int main()
 ```
 
 **不要忘了`Ctrl+Z`表示输入结束**
+
+## 1.5 类简介(class)
+
+C++ 最初的一个设计焦点就是能定义使用上像内置类型一样自然的**类类型**(class type)。
+
+假设类名为`Sales_item`，头文件`Sales_item.h`已经定义了这个类。通常使用`.h`作为头文件的后缀。
+
+### 1.5.1 Sales_item 类
+
+```cpp
+Sales_item item;
+```
+
+是想表达`item`是一个`Sales_item`类型的对象。我们通常将“一个`Sales_item`类型的对象”简单说成“一个`Sales_item`对象”，或更简单的“一个`Sales_item`”。
+
+#### 读写`Sales_item`
+
+```cpp
+#include <iostream>
+#include "Sales_item.h"
+int main()
+{
+    Sales_item book;
+    // 读入 ISBN 号，售出的册数以及销售价格
+    std::cin >> book;
+    // 写入 ISBN、售出的册数、总销售额和平均价格
+    std::cout << book << std::endl;
+    return 0;
+}
+```
+
+#### `Sales_item`对象的加法
+
+```cpp
+#include <iostream>
+#include "Sales_item.h"
+int main()
+{
+    Sales_item item1, item2;
+    std::cin >> item1 >> item2; // 读取一对交易记录
+    std::cout << item1 + item2 << std::endl;
+    return 0;
+}
+```
+
+### 1.5.2 初识成员函数
+
+将两个`Sales_item`对象相加的程序首先应该检查两个对象是否具有相同的`ISBN`：
+
+```cpp
+#include <iostream>
+#include "Sales_item.h"
+int main()
+{
+    Sales_item item1, item2;
+    std::cin >> item1 >> item2;
+    // 首先检查 item1 和 item2 是否表示相同的书
+    if (item1.isbn() == item2.isbn()) {
+        std::cout << item1 + item2 << std::endl;
+        return 0;   // 表示成功
+    } else {
+        std::cerr << "Data must refer to same ISBN"
+                  << std::endl;
+        return -1;  // 表示失败
+    }
+}
+```
+
+#### 什么是成员函数？
+
+调用名为`isbn`的**成员函数**(`member function`)。成员函数是定义为类的一部分的函数，有时也被成为**方法**(`method`)。
+
+**点运算符**(`.`)，表示“名为 item1 的对象的 isbn 成员”。点运算符只能用于类类型的对象。
+
+**调用运算符**(`()`)，使用它来调用一个函数，调用运算符是一对圆括号，立面放置实参(argument)列表(可能为空)。
+
+
+## 1.6 书店程序
+
+我们需要从一个文件中读取销售记录，生成每本书的销售报告，显示售出册数、总销售额和平均售价。我们假定每个`ISBN`书号的所有销售记录在文件中是聚在一起保存的。
+
+我们的程序将每个`ISBN`的所有数据局合起来，并入名为 `total` 的变量中。
+我们使用另一个名为`trans`的变量保存读取的每条销售记录。
+如果`trans`和`total`指向相同的`ISBN`，我们更新`total`的值。
+否则，我们会打印`total`的值，并将其充值未刚刚读取的数据(`trans`)：
+
+```cpp
+#include <iostream>
+#include "Sales_item.h"
+int main()
+{
+    Sales_item total;   //保存下一条交易记录的变量
+    // 读入第一条交易记录，并确保有书可以处理
+    if (std::cin >> total) {
+        Sales_item trans;   // 保存和的变量
+        // 读入并处理剩余交易记录
+        while (std::cin >> trans) {
+            // 如果我们仍在处理相同的书
+            if (total.isbn() == trans.isbn())
+                total += trans; // 更新total值即总销售额
+            else {
+                // 打印前一天本书的结果
+                std::cout << total << std::endl;
+                total = trans; // total 现在表示下一本书的销售额
+            }
+        }
+    } else {
+        // 没有输入！警告读者
+        std::cerr << "No data?!" << std::endl;
+        return -1;  // 表示失败
+    }
+    return 0;
+}
+```
