--- a/第2章 变量和基本类型/第2章 变量和基本类型.md
+++ b/第2章 变量和基本类型/第2章 变量和基本类型.md
@@ -1131,4 +1131,147 @@ i
 (2) 编译器推断出来的`auto`类型有时候和初始值的类型并不完全一样，编译器会适当地改变结果类型使其更符合初始化规则。例如，`auto`一般会忽略掉顶层 const，而把底层 const 保留下来。与之相反，`decltype`会保留变量的顶层 const。
 (3) 与`auto`不同，`decltype`的结果类型与表达式形式密切相关，如果变量名加上了一对括号，则得到的类型与不加括号时会有不同。如果`decltype`使用的是一个不加括号的变量，则得到的结果就是该变量的类型；如果给变量加上了一层或多层括号，则编译器将推断得到引用类型。
 
-## 2.6 自定义数据结构（未完待续）
+## 2.6 自定义数据结构
+
+从最基本的层面理解，数据结构是把一组相关的数据元素组织起来然后使用它们的策略和方法。`Sales_item`类就是一个数据结构。
+
+### 2.6.1 定义`Sales_data`类型
+
+既然我们筹划的这个数据结构不带有任何运算功能，不妨把它命为`Sales_data`以示与`Sales_item`的区别。`Sales_data`初步定义如下：
+
+```cpp
+struct Sales_data {
+    std::string bookNo;
+    unsigned units_sold = 0;
+    double revenue = 0.0;
+}
+```
+
+我们的类以关键字**struct**开始，紧跟着类名和类体（其中类体部分可以为空）。类体由花括号包围形成了一个新的作用域。
+
+类体右侧的表示结束的花括号后**必须写一个分号**，这是因为类体后面可以紧跟变量名以示对该类型对象的定义，所以分号必不可少：
+
+```cpp
+struct Sales_data { /*...*/ } accum, trans, *salesptr;
+
+// 与上一条语句等价，但可能更好一些
+struct Sales_data { /*...*/ }
+Sales_data accum, trans, *salesptr;
+```
+
+分号表示声明符（通常为空）的结束。一般来说，最好不要把对象的定义和类的定义放在一起。
+这么做无异于把两种不同实体的定义混在了一条语句里，一会儿定义类，一会儿又定义变量，显然这是一种不被建议的行为。
+
+**练习2.40：根据自己的理解写出 Sales_data 类，最好与书中的例子有所区别。**
+
+```cpp
+/* 练习2.40：根据自己的理解写出 Sales_data 类，最好与书中的例子有所区别。*/
+
+struct Sales_data {
+    std::string bookNo;         // 书籍编号
+    unsigned units_sold = 0;    // 销售量
+    double sellingprice = 0.0;  // 零售价
+    double saleprice = 0.0;     // 实售价
+    double discount;            // 折扣
+};
+```
+
+#### 类数据成员
+
+类体定义类的**成员**，我们的类只有**数据成员**(data member)。
+
+定义数据成员的方法和定义普通变量一样：首先说明一个基本类型，随后紧跟一个或多个声明符。
+
+C++11新标准规定，可以为数据成员提供一个**类内初始值**(in-class initializer)。没有初始值的成员将被默认初始化。
+
+### 2.6.2 使用`Sales_data`类
+
+#### 添加两个`Salese_data`对象
+
+```cpp
+#include <iostream>
+#include <string>
+#include "Sales_data.h"
+int main()
+{
+    Sales_data data1, data2;
+    // 读入 data1 和 data2 的代码
+    // 检查 data1 和 data2 的 ISBN 是否相同的代码
+    // 如果相同，求 data1 和 data2 的总和
+}
+```
+
+#### `Salese_data`对象读入数据
+
+```cpp
+double price = 0;   // 书的单价，用于计算销售收入
+// 读入第 1 笔交易：ISBN、销售数量、单价
+std::cin >> data1.bookNo >> data1.units_sold >> price;
+// 计算销售收入
+data1.revenue = data1.units_sold * price;
+```
+
+#### 输出两个`Salese_data`对象的和
+
+剩下的工作就是检查两笔交易涉及的 ISBN 编号是否相同。如果相同输出它们的和，否则输出一条报错信息：
+
+```cpp
+if (data1.bookNo == data2.bookNo) {
+    unsigned totalCnt = data1.units_sold + data2.units_sold;
+    double totalRevenue = data1.revenue + data2.revenue;
+    // 输出：ISBN、总销售量、总销售额、平均价格
+    std::cout << data1.bookNo << " " << totalCnt << " " << totalRevenue << " ";
+    if (totalCnt != 0)
+        std::cout << totalRevenue / totalCnt << std::endl;
+    else
+        std::cout << "(no sales)" << std::endl;
+    return 0;   // 标示成功
+} else {        // 两笔交易的 ISBN 不一样
+    std::cerr << "Data must refer to the same ISBN" << std::endl;
+    return -1;  // 标示失败
+}
+```
+
+### 2.6.3 编写自己的头文件
+
+为了确保各个文件中类的定义一致，类通常被定义在头文件中，而且类所在头文件的名字应与类的名字一样。
+
+头文件通常包含哪些只能被定义一次的实体，如类、`const`和`constexpr`变量等。
+头文件也经常用到其他头文件的功能。
+例如，`Sales_data`类包含有一个`string`成员，所以`Sales_data.h`必须包含`string.h`头文件。
+同时，`Sales_dta`类的程序为了能操作`bookNo`成员需要再一次包含`string.h`头文件。
+这样，事实上使用`Sales_data`类的程序就先后两次包含了`stirng.h`头文件：
+一次是直接包含的，另有一次是随着包含`Sales_data.h`被隐式地包含进来的。
+
+#### 预处理概述
+
+确保头文件多次包含仍能安全工作的常用技术是**预处理器**(preprocessor)，它由C++语言从C语言继承而来。
+预处理器是在编译之前执行的一段程序，可以部分地改变我们所写的程序。
+之前已经用到了一项预处理功能`#include`，当预处理器看到`#include`标记时就会用指定的头文件的内容代替`#include`。
+
+ C++程序还会用到的一项预处理功能是**头文件保护符**(header guard)，头文件保护符依赖于预处理变量。
+ 预处理变量有两种状态：已定义 和 未定义。
+
+ `#define`指令把一个名字设定为预处理变量，
+ 另外两个指令则分别检查某个指定的与处理变量是否已经定义：
+ `#ifdef` 当且仅当变量已定义时为真，
+ `#ifndef` 当且仅当变量未定义时为真。
+ 一旦检查结果为真，则执行后续操作直至遇到`#endif`指令为止。
+
+```cpp
+// 使用这些功能就能有效地防止重复包含的发生：
+
+#ifndef SALES_DATA_H
+#define SALES_DATA_H
+#include <string>
+struct Sales_data {
+    std::string bookNo;
+    unsigned units_sold = 0;
+    double revenue = 0.0;
+};
+#endif
+```
+
+第一次包含`Sales_data.h`时，`#ifndef`的检查结果为真，预处理器将顺序执行后面的操作直至遇到`#endif`为止。此时，预处理变量`SALES_DATA_H`的值将变为已定义，而且`Sales_data.h`也会被拷贝到我们的程序中来。
+后面如果再一次包含`Sales_data.h`，则`#ifndef`的检查结果将为假，编译器将忽略`#ifndef`到`#endif`之间的部分。
+为了避免与程序中的其他实体发生名字冲突，一般把预处理变量的名字全部大写。
